# deep-learning-from-scratch

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: deploy.yml
data/: get_mnist.py
docs/: CURRICULUM.md  ROADMAP.md
docs/conventions/: assignment.md  c-style.md  math-notation.md  new-module.md  publishing.md  viz-style.md
docs/references/: papers.md
lib/c/nanograd/: CMakeLists.txt  conv.c  init.c  nanograd.h  nn.c  optim.c  rng.c
lib/python/nanograd/: __init__.py  conv.py  init.py  layers.py  net.py  optim.py  rng.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/src/content/: config.ts
site/src/layouts/: BaseLayout.astro  PostLayout.astro
site/src/pages/: index.astro
topics/00-perceptron/: README.md  assignment.ipynb  notebook.ipynb
topics/00-perceptron/anim/: scene.py
topics/00-perceptron/c/: perceptron.c
topics/00-perceptron/python/: perceptron.py
topics/00-perceptron/tests/: check_utils.py  test_agreement.py
topics/01-mlp-backprop/: README.md  assignment.ipynb  figures.py  notebook.ipynb
topics/01-mlp-backprop/anim/: scene.py
topics/01-mlp-backprop/c/: mlp.c
topics/01-mlp-backprop/python/: mlp.py
topics/01-mlp-backprop/tests/: check_utils.py  test_agreement.py
topics/02-training-toolkit/: README.md  assignment.ipynb  notebook.ipynb
topics/02-training-toolkit/anim/: scene.py
topics/02-training-toolkit/c/: CMakeLists.txt  toolkit.c
topics/03-lenet/: README.md  assignment.ipynb  notebook.ipynb
topics/03-lenet/anim/: scene.py
(+29 files in other folders)
